--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,32 +19,62 @@
     "@angular/core": "~2.1.0",
     "@angular/forms": "~2.1.0",
     "@angular/http": "~2.1.0",
+    "@angular/material": "^2.0.0-alpha.9-3",
     "@angular/platform-browser": "~2.1.0",
     "@angular/platform-browser-dynamic": "~2.1.0",
     "@angular/platform-server": "^2.1.0",
     "@angular/router": "~3.1.0",
     "@angular/upgrade": "~2.1.0",
+    "@angular2-material/card": "^2.0.0-alpha.8-2",
+    "@angular2-material/core": "^2.0.0-alpha.8-2",
+    "@angular2-material/input": "^2.0.0-alpha.8-2",
+    "@angular2-material/sidenav": "^2.0.0-alpha.8-2",
+    "@angular2-material/toolbar": "^2.0.0-alpha.8-2",
     "angular-in-memory-web-api": "~0.1.5",
     "core-js": "^2.4.1",
+    "gulp-scss": "^1.4.0",
+    "less": "^2.7.1",
+    "ng2-bootstrap": "^1.1.14",
+    "ng2-material": "^0.8.1",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.39",
+    "traceur": "0.0.111",
+    "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.25"
   },
   "devDependencies": {
+    "@angular/compiler-cli": "^0.6.3",
+    "@angular/platform-server": "^2.0.0",
+    "@types/hammerjs": "^2.0.32",
+    "@types/jasmine": "^2.2.30",
+    "angular-cli": "^1.0.0-beta.16",
+    "codelyzer": "~0.0.26",
     "concurrently": "^3.0.0",
     "del": "^2.2.2",
+    "firebase-tools": "^3.0.7",
     "gulp": "^3.9.1",
+    "gulp-count": "^0.3.0",
     "gulp-gzip": "^1.4.0",
     "gulp-load-plugins": "^1.3.0",
     "gulp-rename": "^1.2.2",
+    "gulp-scss-lint": "^0.4.0",
     "gulp-task-listing": "^1.0.1",
     "gulp-util": "^3.0.7",
+    "jasmine-core": "2.4.1",
+    "jasmine-spec-reporter": "2.5.0",
+    "karma": "0.13.22",
+    "karma-chrome-launcher": "0.2.3",
+    "karma-jasmine": "0.3.8",
+    "karma-remap-istanbul": "^0.2.1",
     "lite-server": "^2.2.2",
+    "protractor": "4.0.3",
     "rollup": "^0.36.1",
     "rollup-plugin-commonjs": "^5.0.4",
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-uglify": "^1.0.1",
+    "ts-node": "1.2.1",
+    "tslint": "3.13.0",
     "typescript": "^2.0.3",
     "typings": "^1.4.0"
   }
