--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -35,6 +35,7 @@
     "babel-polyfill": "^6.9.1",
     "classnames": "^2.2.5",
     "es6-promise": "^3.2.1",
+    "express": "^4.14.0",
     "fr-accordion": "^1.0.6",
     "html-to-text": "^2.1.3",
     "html-webpack-plugin": "^1.7.0",
